Actividad optativa 1. Struts2

--- a/src/main/resources/org/demo/package_es.properties
+++ b/src/main/resources/org/demo/package_es.properties
@@ -4,5 +4,4 @@ form.tittle.message = Formulario de registro de facturas
 form.subject.message = Concepto:
 form.fromDate.message = Fecha desde:
 form.toDate.message = Fecha hasta:
-form.import.message = Importe:
-
+form.importe.message = Importe (IVA incluido):
